# 3DRasterizer

./: .gitignore  AABB.h  CMakeLists.txt  ObjLoader.h  ObjLoader_test.c  README.md  Renderer.c  Renderer.h  app.c  lights.c  lights.h  main.c  obj.c  obj.h  test_sqaure.h  textures.c  textures.h  utils.h  vector.c  vector.h  vector_test.c
libs/: tinyobj_loader_c.h
matematika/: mat3.h  mat4.h  matematika.h  vec4.h
src/: Renderer.c  Renderer.h  app.h  lights.c  lights.h  main.c  obj.c  obj.h  textures.c  textures.h  timer.h  utils.h
src/matematika/: common.h  mat3.h  mat4.h  vec3.h  vec4.h
